# Solutions

./: .gitattributes  .py  1  两数之和  1.sql  1004  最大连续1的个数 III  1004  最大连续1的个数 III.py  1016  子串能表示从1到N数字的二进制串  1016  子串能表示从1到N数字的二进制串.py  1046  最后一块石头的重量  1052  爱生气的书店老板.py  1085  最小元素各数位之和  1100  长度为k的 无重复字符子串.py  1150  检查一个数是否在数组中占绝大多数.py  1151  最少交换次数来组合所有的1.py  1176  健身计划评估.py  1176健身计划评估.py  119  杨辉三角 II  1207  独一无二的出现次数  1208  尽可能使字符串相等  1208  尽可能使字符串相等.py  121  买卖股票的最佳时机  1228  等差数列中缺失的数字  123.md  123.py  123.sql  123.sqlite  1234  替换子串得到平衡字符串  125  验证回文串  125  验证回文串.py  1287  有序数组中出现次数超过25%的元素.py  1290  二进制链表转整数  1295  统计位数为偶数的数字  1297  子串的最大出现字数.py  1342  将数字变成0的操作次数  1343  大小为k且平均值大于等于阈值的子数组数目.py  1343大小为k且平均值大于等于阈值的子数组数目.py  1385  两个数组间的距离值  14  最长公共前缀.py  1422  分割字符串的最大得分  1423  可获得的最大点数.py  (+188 more)
.cph/: .1512A.py_9cb2e3f4a35ca6254196e20b7feccc78.prob  .A_1_1.py_fae281464ecbdc136e79188140f5e84e.prob  .A_Always_Increasing.py_9eb8ed4f8e787b9c4eb3239dc072d288.prob  .A_Append_s.py_3c3ab7571fd63d4b20ad362049151425.prob  .A_Array_Coloring.py_9997778038c3f8919948e463e98f71d7.prob  .A_Bacteria_Growth_Experiment.py_c78c2d0af6afa781b15d7cf21108169f.prob  .A_Balloon_Trip.py_d6b337c35623b7dcce29a9ed8a6811ab.prob  .A_Birthday.py_ef25cecfc892296f633f0aab6c585fda.prob  .A_Black_Square.py_e9e9efec02b3c110e65da455d5942274.prob  .A_Blackslex_and_Password.py_15d5d8b5c270be695cc530cecfff0efe.prob  .A_Chat_room.py_8e8d0d76b6a28a79d72f2859e37a1019.prob  .A_Divisible_Permutation.py_b1d57f0c2b41d70c14323b235bbb9444.prob  .A_Dragons.py_1d54bbb39251007869799c1bca2bdbda.prob  (+167 more)
Kaggle/: darf.ipynb  (+1 more)
(+1772 files in other folders)
